[gd_scene load_steps=12 format=3 uid="uid://cgkeg25ijxb8n"]

[ext_resource type="Script" path="res://Scripts/Interface/ChatWindow.gd" id="1_k0ocf"]
[ext_resource type="Texture2D" uid="uid://c67lnwj1jecix" path="res://Assets/Textures/Interface/container_minimal_gold_darkest.png" id="2_0kc4d"]
[ext_resource type="Texture2D" uid="uid://v1j17vpcb1ro" path="res://Assets/Textures/Interface/container_minimal_gold_default.png" id="3_rnsl1"]
[ext_resource type="Texture2D" uid="uid://urqlxyptrrea" path="res://Assets/Textures/Interface/border_minimal_gold.png" id="4_3yi4g"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7xn4t"]
texture = ExtResource("2_0kc4d")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ba0kd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qtqqg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gkh5b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cdomn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_votbx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fhhv5"]

[node name="ChatWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 8
mouse_filter = 2
script = ExtResource("1_k0ocf")

[node name="VDIV" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -265.0
offset_right = 550.0
grow_vertical = 0
theme_override_constants/separation = 5

[node name="TabContainer" type="TabContainer" parent="VDIV"]
custom_minimum_size = Vector2(550, 250)
layout_mode = 2
theme_override_styles/tab_selected = SubResource("StyleBoxTexture_7xn4t")
clip_tabs = false

[node name="Chat" type="ScrollContainer" parent="VDIV/TabContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="Box" type="PanelContainer" parent="VDIV/TabContainer/Chat"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1

[node name="Margin" type="MarginContainer" parent="VDIV/TabContainer/Chat/Box"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 6

[node name="ChatLog" type="RichTextLabel" parent="VDIV/TabContainer/Chat/Box/Margin"]
layout_mode = 2
focus_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_ba0kd")
theme_override_styles/normal = SubResource("StyleBoxEmpty_qtqqg")
bbcode_enabled = true
fit_content = true
scroll_following = true
selection_enabled = true
drag_and_drop_selection_enabled = false

[node name="LFG" type="ScrollContainer" parent="VDIV/TabContainer"]
visible = false
layout_mode = 2
horizontal_scroll_mode = 0

[node name="Box" type="PanelContainer" parent="VDIV/TabContainer/LFG"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1

[node name="Margin" type="MarginContainer" parent="VDIV/TabContainer/LFG/Box"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 6

[node name="LFGLog" type="RichTextLabel" parent="VDIV/TabContainer/LFG/Box/Margin"]
layout_mode = 2
focus_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_gkh5b")
theme_override_styles/normal = SubResource("StyleBoxEmpty_cdomn")
bbcode_enabled = true
text = "[ 4 / 10][Asara][Dungeon: Molten Core]
[ 4 /  5 ][Adrek][Quest: Cave of Shadows]
[ 2 /  5 ][Highwind][Dungeon: The Howling Vortex]
[ 1 / 10][Stinky][Quest: Stinky's Revenge]"
fit_content = true
scroll_following = true
selection_enabled = true
drag_and_drop_selection_enabled = false

[node name="Combat" type="ScrollContainer" parent="VDIV/TabContainer"]
visible = false
layout_mode = 2
horizontal_scroll_mode = 0

[node name="Box" type="PanelContainer" parent="VDIV/TabContainer/Combat"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1

[node name="Margin" type="MarginContainer" parent="VDIV/TabContainer/Combat/Box"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 6

[node name="CombatLog" type="RichTextLabel" parent="VDIV/TabContainer/Combat/Box/Margin"]
layout_mode = 2
focus_mode = 2
theme_override_colors/default_color = Color(0.72549, 0.72549, 0.72549, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_votbx")
theme_override_styles/normal = SubResource("StyleBoxEmpty_fhhv5")
bbcode_enabled = true
text = "[color=green]Adrek's[/color] [color=yellow]Magic Missile[/color] hits [color=red]Slime[/color] for [color=red]17 arcane damage.[/color]
[color=red]Slime's[/color] [color=yellow]Jelly Attack[/color] hits [color=green]Adrek[/color] for [color=red]8 physical damage.[/color]
[color=green]Adrek's[/color] [color=yellow]Curing Touch[/color] hits [color=green]Adrek[/color] for [color=green]30 healing.[/color]
[color=green]Adrek's[/color] [color=yellow]Curing Touch[/color] [color=orange]critically hits [color=green]Adrek[/color] for [color=green]50 healing![/color][/color]
[color=green]Asara's[/color] [color=yellow]Weapon Attack[/color] hits [color=red]Slime[/color] for [color=red]15 physical damage.[/color]
[color=green]Asara's[/color] [color=teal]Sword Mastery[/color] grants an extra attack!
[color=green]Asara's[/color] [color=yellow]Weapon Attack[/color] [color=orange]critically hits [color=red]Slime[/color] for [color=red]45 physical damage![/color][/color]
[color=red]Slime[/color] has been defeated!
[color=purple]You gain 90 experience points."
fit_content = true
scroll_following = true
selection_enabled = true
drag_and_drop_selection_enabled = false

[node name="HDIV" type="HBoxContainer" parent="VDIV"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ChannelFrame" type="PanelContainer" parent="VDIV/HDIV"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Margin" type="MarginContainer" parent="VDIV/HDIV/ChannelFrame"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 0

[node name="ChannelLabel" type="Label" parent="VDIV/HDIV/ChannelFrame/Margin"]
z_index = 1
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 1
text = "General"
vertical_alignment = 1

[node name="BorderFrame" type="NinePatchRect" parent="VDIV/HDIV/ChannelFrame"]
layout_mode = 2
texture = ExtResource("3_rnsl1")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="TextInputFrame" type="PanelContainer" parent="VDIV/HDIV"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3

[node name="Margin" type="MarginContainer" parent="VDIV/HDIV/TextInputFrame"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_right = 6

[node name="TextInputLine" type="LineEdit" parent="VDIV/HDIV/TextInputFrame/Margin"]
layout_mode = 2
drag_and_drop_selection_enabled = false
caret_blink = true

[node name="BorderFrame" type="NinePatchRect" parent="VDIV/HDIV/TextInputFrame"]
layout_mode = 2
texture = ExtResource("4_3yi4g")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[connection signal="focus_entered" from="VDIV/HDIV/TextInputFrame/Margin/TextInputLine" to="." method="_on_text_input_line_focus_entered"]
[connection signal="focus_exited" from="VDIV/HDIV/TextInputFrame/Margin/TextInputLine" to="." method="_on_text_input_line_focus_exited"]
[connection signal="text_changed" from="VDIV/HDIV/TextInputFrame/Margin/TextInputLine" to="." method="_on_text_input_line_text_changed"]
[connection signal="text_submitted" from="VDIV/HDIV/TextInputFrame/Margin/TextInputLine" to="." method="_on_text_input_line_text_submitted"]
